# dsc

./: .gitignore  Cargo.toml  Contributing.md  README.md  build.rs  default.nix  flake.nix  renovate.json  run-tests.sh  shell.nix  test.toml
.cargo/: config
.github/: docspell.conf
.github/workflows/: cicd.yml  int_test.yml  publish.yml  release.yml
ci/: README.md  docker-compose.yml  docspell.conf  dsc-config.toml
ci/docspell-server/: Dockerfile  docspell-0.24.0-dump-h2-1.24.0-2021-07-13-2307.sql
docker/: build.sh  dsc.dockerfile
nix/: default.nix  dsc.nix  module.nix  release.nix  rust-platform.nix
nix/nixosConfigurations/: default.nix
nix/tests/: buildvm.sh  startvm.sh  test-config.nix
src/: cli.rs  cmd.rs  config.rs  error.rs  file.rs  http.rs  lib.rs  main.rs  opts.rs  sink.rs  table.rs  types.rs  util.rs
src/cli/: cmd.rs  opts.rs  sink.rs  table.rs
src/cli/cmd/: admin.rs  bookmark.rs  cleanup.rs  download.rs  export.rs  file_exists.rs  generate_completions.rs  geninvite.rs  item.rs  login.rs  logout.rs  open_item.rs  register.rs  search.rs  search_summary.rs  source.rs  upload.rs  version.rs  view.rs  watch.rs
src/cli/cmd/admin/: convert_all_pdfs.rs  disable_2fa.rs  file_clone_repository.rs  file_integrity_check.rs  generate_previews.rs  recreate_index.rs  reset_password.rs
src/cli/cmd/bookmark/: get.rs
src/cli/cmd/item/: fields.rs  get.rs  tags.rs
src/cli/cmd/source/: list.rs
src/cmd/: admin.rs  admin_previews.rs  cleanup.rs  download.rs  file_exists.rs  generate_completions.rs  geninvite.rs  login.rs  logout.rs  register.rs  search.rs  search_summary.rs  source.rs  upload.rs  version.rs  view.rs  watch.rs
src/cmd/admin/: generate_previews.rs  recreate_index.rs  reset_password.rs
src/cmd/item/: get.rs
src/cmd/source/: list.rs
src/http/: payload.rs  proxy.rs  session.rs  util.rs
src/util/: digest.rs  dupes.rs  file.rs  pass.rs
tests/: integration.rs  setup.rs
tests/common/: mod.rs
