[package]
name = "dsc"
version = "0.11.0-pre"
authors = ["eikek <eikek@posteo.de>"]
edition = "2021"
description = "A command line interface to Docspell."
homepage = "https://docspell.org"
license = "GPLv3"
repository = "https://github.com/docspell/dsc"
build = "build.rs"
keywords = [ "docspell", "cli" ]
categories = [ "command-line-utilities" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4"
clap = { version = "4.4.6", features = ["derive", "wrap_help"] }
clap_complete = "4.4.3"
console = {version = "0.15"}
csv = "1.3"
dialoguer = { version = "0.11" }
dirs = { version = "4.0" }
env_logger = { version = "0.10" }
glob = "0.3"
hex = "0.4"
log = { version = "0.4" }
notify = "4.0"
openssl = { version = "0.10", optional = true }
percent-encoding = { version = "2.3" }
prettytable-rs = { version = "0.10" }
reqwest = { version = "0.11", default-features = false, features = ["json", "blocking", "multipart"] }
rsotp = "0.1.0"
serde = { version = "1.0", features = ["derive"] }
serde-lexpr = "0.1"
serde_json = "1.0"
sha2 = { version = "0.10" }
snafu = { version = "0.7" }
toml = { version = "0.8" }
webbrowser = { version = "0.8" }
zip = { version = "0.6" }
pathdiff = "0.2"
sanitize-filename = "0.5"

[target.'cfg(unix)'.dependencies]
file-locker = { version = "1.1" }

[target.'cfg(macos)'.dependencies]
file-locker = { version = "1.1" }


[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
vendored-openssl = ["openssl/vendored"]

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3"

[build-dependencies]
vergen = "7"
#anyhow = "1"