[package]
name = "dsc"
version = "0.12.0-pre"
authors = ["eikek <eikek@posteo.de>"]
edition = "2021"
description = "A command line interface to Docspell."
homepage = "https://docspell.org"
license = "GPLv3"
repository = "https://github.com/docspell/dsc"
build = "build.rs"
keywords = [ "docspell", "cli" ]
categories = [ "command-line-utilities" ]
readme = "README.md"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.38"
clap = { version = "4.5.4", features = ["derive", "wrap_help"] }
clap_complete = "4.5.2"
console = {version = "0.15.8"}
csv = "1.3"
dialoguer = { version = "0.11" }
dirs = { version = "5.0.1" }
env_logger = { version = "0.11.3" }
glob = "0.3.1"
hex = "0.4.3"
log = { version = "0.4.21" }
notify = "4.0.17"
openssl = { version = "0.10.64", optional = true }
percent-encoding = { version = "2.3.1" }
prettytable-rs = { version = "0.10" }
reqwest = { version = "0.12.4", default-features = false, features = ["json", "blocking", "multipart"] }
rsotp = "0.1.0"
serde = { version = "1.0.200", features = ["derive"] }
serde-lexpr = "0.1.3"
serde_json = "1.0.116"
sha2 = { version = "0.10.8" }
snafu = { version = "0.8.2" }
toml = { version = "0.8.12" }
webbrowser = { version = "0.8.15" }
zip = { version = "0.6.6" }
pathdiff = "0.2.1"
sanitize-filename = "0.5"

[target.'cfg(unix)'.dependencies]
file-locker = { version = "1.1.2" }

[target.'cfg(macos)'.dependencies]
file-locker = { version = "1.1.2" }


[features]
default = ["reqwest/default-tls"]
rustls = ["reqwest/rustls-tls"]
vendored-openssl = ["openssl/vendored"]

[dev-dependencies]
assert_cmd = "2.0.14"
predicates = "3.1.0"

[build-dependencies]
vergen = "9.0.0"
#anyhow = "1"